--- a/dashboard.html
+++ b/dashboard.html
@@ -156,7 +156,7 @@
         }
 
         function payHere() {
-            window.location.href = "https:// gcash.com"; // Redirect to GCash
+            alert("DECLINED! Full user paying. Try again later");
         }
 
         function openLogoutModal() {
